# h5-stats-generator

./: package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/app/: commands.rs  manager.rs  mod.rs
src-tauri/src/generator/: commands.rs  mod.rs  pair.rs  player.rs  race.rs  styles.rs  types.rs
src-tauri/src/graphql/: queries.rs  schema.json
src-tauri/src/graphql/queries/: get_all_games.graphql  get_games.graphql  get_heroes.graphql  get_matches.graphql  get_tournament.graphql  get_tournaments.graphql  get_users.graphql  update_game.graphql
src-tauri/src/services/tournament/: payloads.rs  service.rs  types.rs
src/components/: generator.tsx  matchFocused.tsx  matchesList.tsx  tournamentCore.tsx
src/stores/: tournament.ts
src/types/: tournament.ts
